--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "backend_master",
   "version": "1.0.0",
   "description": "welcome to backend",
-  "main": "app.js",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+     "dev":"nodemon src/index.js"
   },
   "author": "Ashutosh Rana",
   "license": "ISC",
