--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-     "dev":"nodemon src/index.js"
+    "dev": "nodemon src/index.js"
   },
   "author": "Ashutosh Rana",
   "license": "ISC",
@@ -13,5 +13,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "prettier": "^3.3.3"
+  }
 }
